# makensolver

./: .gitignore  README.md  pyproject.toml
src/makenapp/: cli.py
src/makensolver/: errors.py  formula.py  solver.py
src/makensolver/operator/: __init__.py  interface.py
src/makensolver/operator/binary/: __init__.py  divide.py  exponentiate.py  minus.py  multiply.py  plus.py
src/makensolver/operator/unary/: __init__.py  factorial.py
tests/makenapp/: test_cli.py
tests/makensolver/: test_formula.py  test_solver.py
tests/makensolver/operator/binary/: test_divide.py  test_exponentiate.py  test_minus.py  test_multiply.py  test_plus.py
tests/makensolver/operator/unary/: test_factorial.py
