[project]
name = "makensolver"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "pysen",
    "flake8",
    "mypy",
    "black",
    "isort",
    "build",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]
only-packages = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/makensolver/__init__.py"

[project.scripts]
makeN = "makenapp.cli:main"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = [
    "tests",
]

[tool.pysen]
version = "0.10.5"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py311"

[[tool.pysen.lint.mypy_targets]]
paths = [
    "./src/"
]

[tool.pysen.lint.source]
includes = [
    "./src/",
    "./tests/",
]
